# BSU

./: .gitignore  .gitmodules  README.md  index.md
ASP.NET/: README.md
Algorithms/: README.md
Algorithms/task 1/: Program.cs  README.md  tst.in  tst.out
Algorithms/task2/: README.md  solution.cpp
Algorithms/task4/: README.md  solution.cpp
Algorithms/task5/: README.md  solution.cpp
Algorithms/task6/: README.md  solution.cpp
Architecture of computer/MPI_Samples/: MPI.xlsx  MPI_Samples.sln
Architecture of computer/OpenMP_Samples/: OpenMP — Задания.docx
Database/: PLSQL7+8.docx  PLSQL7+8.gdoc  PLSQL9.docx  PLSQL9.gdoc  README.md  SQL3_2.docx  SQL3_3.docx  SQL4.docx  SQL4.gdoc  SQL5.gdoc  SQL6.gdoc
Database/KR1_variant12/: kr.dmd  script.ddl
Database/lab1/: lab1.dmd
Database/lab1_1/: dl_settings.xml  lab1_1.dmd  lab1_1_report.docx
Database/lab3/: SQL3_4.docx  lab3.sql
Database/lab5/: SQL5.docx
Database/lab6/: SQL6.docx
Embedded Systems/lab2/: lab2.ino
MV/: README.md
MV/lab1/: lab1.py
MV/lab2/: lab2.py  out.txt
MathMod/lab1/: lab1.py  out.txt
MathMod/lab2/: lab2.py
MathMod/lab3/: generators.py  lab3.py  tests.py
MathMod/lab4/: lab4.py
MathMod/lab5/: lab5.py
MathMod/lab6/: lab6_17.gpr  lab6_17.gps
MathMod/lab7/: lab7_41.gps
Networking/: Lab_01_СысойИА.docx  Lab_02_СысойИА.docx  Lab_08_СысойИА.docx
Networking/Lab_10_2_СысойИА/: Lab_10_2_СысойИА.docx  lab_10_2_СысойИА.pkt
Networking/Lab_11_СысойИА/: Lab_11_СысойИА.docx  lab_11_СысойИА.pkt
Networking/Lab_12_СысойИА/: Lab_12_СысойИА.docx  lab_12_СысойИа.pkt
Networking/lab10/: Lab_10_СысойИА.docx  lab10.pkt
Networking/lab3/: Lab_03_СысойИА.docx  lab3.pkt  lab3_3_1.pkt  lab3_3_2.pkt  lab3_4.pkt
Networking/lab6/: Lab_06_СысойИА.docx  lab6_1.pkt  lab6_2.pkt
Networking/lab7/: Lab_07_СысойИА.docx  lab7_CысойИА.pkt
Networking/lab8/: lab8_СысойИА.pkt
Networking/lab9/: Lab_09_СысойИА.docx  lab_09_СысойИА.pkt
Parallel and distributed systems/parallel/lab5/: CMakeLists.txt  SafeQueue.cpp  SafeQueue.h  lab5_results.xlsx  linear.cpp  safe_queue.cpp  standart_queue.cpp  standart_queue_linear.cpp
Parallel and distributed systems/parallel/lab6/: CMakeLists.txt  lab6_results.xlsx  task10.cpp  task6.cpp  task7.cpp  task8.cpp
PrPs/: README.md  lab0.eap
PrPs/final/: Otchet_Pps.docx  final.eap
PrPs/lab1/: List of requirements.rtf  lab1.eap  Лаб1 описание.docx  Отчет_лаб1.docx
PrPs/lab2/: lab2.eap  Добавление данных.rtf  Запрос информации.rtf  Обновление данных.rtf  Обработка запроса.rtf  Отчет_лаб2.docx  Получение ответа на запрос.rtf  Просмотр информации.rtf
PrPs/lab3/: lab3.eap  Отчет_лаб3.docx
PrPs/lab4/: lab4.eap  Отчет_лаб4.docx
PrPs/lab5/: lab5.eap  lab5.ldb  Отчет_лаб5.docx
Programming/c++/1 сем/sort_array_puz/sort_array_puz/: CMakeLists.txt  ReadMe.txt  sort_array_puz.cpp  sort_array_puz.vcxproj  sort_array_puz.vcxproj.filters  stdafx.cpp
Programming/c++/1 сем/sort_array_puz/sort_array_puz/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sort_array_puz.lastbuildstate  vc110.idb
Programming/c++/1 сем/sort_array_puz/sort_array_puz/Release/: CL.read.1.tlog  CL.write.1.tlog  CMakeLists.txt  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sort_array_puz.lastbuildstate
System programming/: ProcessA.cpp  ProcessB.cpp
System programming/lab3/: lab3.sln
System programming/lab_1_DNS_vs2015/: readme.txt
Web/: README.md
lab5/: CMakeLists.txt  queue_not_my.cpp
parallel/: README.md
task 1/: tst.out
(+2680 files in other folders)
